force-app/main/default/objects/Report_Section__c/Report_Section__c.object-meta.xml
<CustomObject>
    <label>Report Section</label>
    <nameField>
        <label>Report Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>