force-app/main/default/objects/Report_Section__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form</label>
    <referenceTo>disco__Form__c</referenceTo>
    <relationshipLabel>Report Sections</relationshipLabel>
    <relationshipName>Report_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>