force-app/main/default/objects/Report_Section__c/fields/Section_content__c.field-meta.xml
<CustomField>
    <fullName>Section_Content__c</fullName>
    <label>Section Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>