force-app/main/default/objects/Report_Section__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Report Sections</relationshipLabel>
    <relationshipName>Report_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>